--- a/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
+++ b/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "4           61.0         87.0    94.0       79.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,6 +494,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -506,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -569,13 +576,16 @@
        "Residual                   1.515581e+21  18119.0       NaN           NaN"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "\n",
     "formula = 'ValueNumeric ~ C(Position) + C(fifa[\"Preferred Foot\"])'\n",
     "model = ols(formula=formula, data=fifa).fit()\n",
     "anova_table = sm.stats.anova_lm(model, typ='II')\n",
@@ -591,12 +601,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "#La diferencia entre las medias es estadísticamente significante\n"
    ]
   },
   {
@@ -608,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +673,7 @@
        "Residual        1.483605e+21  18043.0       NaN           NaN"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +736,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,9 +773,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/luis/.local/lib/python3.6/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+      "  return ptp(axis=axis, out=out, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols\n",
@@ -779,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +819,7 @@
        "  <th>Date:</th>             <td>Fri, 19 Jul 2019</td> <th>  Prob (F-statistic):</th>   <td>0.0116</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>09:51:11</td>     <th>  Log-Likelihood:    </th> <td>-3.7457e+05</td>\n",
+       "  <th>Time:</th>                 <td>10:02:05</td>     <th>  Log-Likelihood:    </th> <td>-3.7457e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 17918</td>      <th>  AIC:               </th>  <td>7.491e+05</td> \n",
@@ -853,7 +872,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.000\n",
        "Method:                 Least Squares   F-statistic:                     4.454\n",
        "Date:                Fri, 19 Jul 2019   Prob (F-statistic):             0.0116\n",
-       "Time:                        09:51:11   Log-Likelihood:            -3.7457e+05\n",
+       "Time:                        10:02:05   Log-Likelihood:            -3.7457e+05\n",
        "No. Observations:               17918   AIC:                         7.491e+05\n",
        "Df Residuals:                   17915   BIC:                         7.492e+05\n",
        "Df Model:                           2                                         \n",
@@ -876,7 +895,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,12 +913,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "#0.00"
    ]
   },
   {
@@ -911,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +952,7 @@
        "  <th>Date:</th>             <td>Fri, 19 Jul 2019</td> <th>  Prob (F-statistic):</th>  <td>9.15e-225</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>09:52:16</td>     <th>  Log-Likelihood:    </th> <td>-3.7406e+05</td>\n",
+       "  <th>Time:</th>                 <td>10:02:08</td>     <th>  Log-Likelihood:    </th> <td>-3.7406e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 17918</td>      <th>  AIC:               </th>  <td>7.481e+05</td> \n",
@@ -982,7 +1002,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.056\n",
        "Method:                 Least Squares   F-statistic:                     1054.\n",
        "Date:                Fri, 19 Jul 2019   Prob (F-statistic):          9.15e-225\n",
-       "Time:                        09:52:16   Log-Likelihood:            -3.7406e+05\n",
+       "Time:                        10:02:08   Log-Likelihood:            -3.7406e+05\n",
        "No. Observations:               17918   AIC:                         7.481e+05\n",
        "Df Residuals:                   17916   BIC:                         7.481e+05\n",
        "Df Model:                           1                                         \n",
@@ -1004,7 +1024,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,12 +1052,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "#0.056"
    ]
   },
   {
@@ -1049,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1069,9 +1090,23 @@
     "# Your code here:\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.scatter(fifa[\"Value\"], fifa[\"Potential\"], alpha=0.5)\n",
+    "plt.scatter(fifa[\"ValueNumeric\"], fifa[\"Potential\"], alpha=0.5)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
