--- a/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
+++ b/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
@@ -12,14 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "# import numpy and pandas\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols \n",
+    "from scipy.stats import f_oneway\n",
+    "from scipy.stats import linregress\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -254,7 +260,6 @@
    ],
    "source": [
     "# Your code here:\n",
-    "\n",
     "fifa.head()"
    ]
   },
@@ -271,8 +276,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fifa[\"Value\"]=fifa[\"Value\"].str.lstrip(\"€\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "def ValueNumeric(string):\n",
+    "    if string.endswith(\"M\"):\n",
+    "        string=string.replace(\"M\",\"\")\n",
+    "        string= float(string)*1000000\n",
+    "    elif string.endswith(\"K\"):\n",
+    "        string=string.replace(\"K\",\"\")\n",
+    "        string= float(string)*1000\n",
+    "    else:\n",
+    "        string=float(string)\n",
+    "    return string\n",
+    "fifa[\"Value\"]=fifa[\"Value\"].apply(ValueNumeric)"
    ]
   },
   {
@@ -288,12 +313,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(fifa[\"Preferred Foot\"])</th>\n",
+       "      <td>2.341622e+14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.673655</td>\n",
+       "      <td>5.608990e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C(fifa[\"Position\"])</th>\n",
+       "      <td>1.657002e+16</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>20.885022</td>\n",
+       "      <td>1.634952e-96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>5.529029e+17</td>\n",
+       "      <td>18119.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 sum_sq       df          F        PR(>F)\n",
+       "C(fifa[\"Preferred Foot\"])  2.341622e+14      1.0   7.673655  5.608990e-03\n",
+       "C(fifa[\"Position\"])        1.657002e+16     26.0  20.885022  1.634952e-96\n",
+       "Residual                   5.529029e+17  18119.0        NaN           NaN"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "formula = 'fifa[\"Value\"] ~ C(fifa[\"Preferred Foot\"])+ C(fifa[\"Position\"])'\n",
+    "model = ols(formula=formula, data=fifa).fit()\n",
+    "anova_table = sm.stats.anova_lm(model, typ='II')\n",
+    "anova_table"
    ]
   },
   {
@@ -305,13 +398,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your conclusions here:\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -322,12 +412,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(fifa[\"Nationality\"])</th>\n",
+       "      <td>3.281224e+16</td>\n",
+       "      <td>163.0</td>\n",
+       "      <td>6.762478</td>\n",
+       "      <td>4.840477e-134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>5.370951e+17</td>\n",
+       "      <td>18043.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              sum_sq       df         F         PR(>F)\n",
+       "C(fifa[\"Nationality\"])  3.281224e+16    163.0  6.762478  4.840477e-134\n",
+       "Residual                5.370951e+17  18043.0       NaN            NaN"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "# Your conclusions here:\n",
+    "formula = 'fifa[\"Value\"] ~ C(fifa[\"Nationality\"])'\n",
+    "model = ols(formula=formula, data=fifa).fit()\n",
+    "anova_table = sm.stats.anova_lm(model, typ='II')\n",
+    "anova_table\n"
    ]
   },
   {
@@ -336,6 +487,13 @@
    "source": [
     "What is your conclusion from this ANOVA?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
