--- a/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
+++ b/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
@@ -17,8 +17,8 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "# import numpy and pandas\n",
-    "\n"
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
