--- a/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
+++ b/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "4           61.0         87.0    94.0       79.0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "4           61.0         87.0    94.0       79.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "4           61.0         87.0    94.0       79.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,6 +696,214 @@
    "source": [
     "fifa['Value'] = fifa['Value'].apply(lambda x: to_num(x))\n",
     "fifa.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Nationality</th>\n",
+       "      <th>Overall</th>\n",
+       "      <th>Potential</th>\n",
+       "      <th>Club</th>\n",
+       "      <th>ValueNumeric</th>\n",
+       "      <th>Preferred_Foot</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Weak Foot</th>\n",
+       "      <th>Acceleration</th>\n",
+       "      <th>SprintSpeed</th>\n",
+       "      <th>Stamina</th>\n",
+       "      <th>Strength</th>\n",
+       "      <th>LongShots</th>\n",
+       "      <th>Aggression</th>\n",
+       "      <th>Interceptions</th>\n",
+       "      <th>Positioning</th>\n",
+       "      <th>Vision</th>\n",
+       "      <th>Penalties</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>L. Messi</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>94</td>\n",
+       "      <td>94</td>\n",
+       "      <td>FC Barcelona</td>\n",
+       "      <td>110500000.0</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cristiano Ronaldo</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>94</td>\n",
+       "      <td>94</td>\n",
+       "      <td>Juventus</td>\n",
+       "      <td>77000000.0</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Neymar Jr</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>92</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Paris Saint-Germain</td>\n",
+       "      <td>118500000.0</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>LW</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>81.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>De Gea</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>91</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Manchester United</td>\n",
+       "      <td>72000000.0</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>K. De Bruyne</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>91</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>102000000.0</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>RCM</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>79.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Name  Age Nationality  Overall  Potential  \\\n",
+       "0           L. Messi   31   Argentina       94         94   \n",
+       "1  Cristiano Ronaldo   33    Portugal       94         94   \n",
+       "2          Neymar Jr   26      Brazil       92         93   \n",
+       "3             De Gea   27       Spain       91         93   \n",
+       "4       K. De Bruyne   27     Belgium       91         92   \n",
+       "\n",
+       "                  Club  ValueNumeric Preferred_Foot Position  Weak Foot  \\\n",
+       "0         FC Barcelona   110500000.0           Left       RF        4.0   \n",
+       "1             Juventus    77000000.0          Right       ST        4.0   \n",
+       "2  Paris Saint-Germain   118500000.0          Right       LW        5.0   \n",
+       "3    Manchester United    72000000.0          Right       GK        3.0   \n",
+       "4      Manchester City   102000000.0          Right      RCM        5.0   \n",
+       "\n",
+       "   Acceleration  SprintSpeed  Stamina  Strength  LongShots  Aggression  \\\n",
+       "0          91.0         86.0     72.0      59.0       94.0        48.0   \n",
+       "1          89.0         91.0     88.0      79.0       93.0        63.0   \n",
+       "2          94.0         90.0     81.0      49.0       82.0        56.0   \n",
+       "3          57.0         58.0     43.0      64.0       12.0        38.0   \n",
+       "4          78.0         76.0     90.0      75.0       91.0        76.0   \n",
+       "\n",
+       "   Interceptions  Positioning  Vision  Penalties  \n",
+       "0           22.0         94.0    94.0       75.0  \n",
+       "1           29.0         95.0    82.0       85.0  \n",
+       "2           36.0         89.0    87.0       81.0  \n",
+       "3           30.0         12.0    68.0       40.0  \n",
+       "4           61.0         87.0    94.0       79.0  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fifa = fifa.rename(columns={\"Value\": \"ValueNumeric\", \"Preferred Foot\": \"Preferred_Foot\"})\n",
+    "fifa.head()\n"
    ]
   },
   {
@@ -711,12 +919,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "\n",
+    "formula = 'ValueNumeric ~ C(Preferred_Foot + Position)'\n",
+    "model = ols(formula=formula, data=fifa).fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(Preferred_Foot + Position)</th>\n",
+       "      <td>2.188308e+16</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>13.638317</td>\n",
+       "      <td>1.098337e-115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>5.477500e+17</td>\n",
+       "      <td>18093.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    sum_sq       df          F         PR(>F)\n",
+       "C(Preferred_Foot + Position)  2.188308e+16     53.0  13.638317  1.098337e-115\n",
+       "Residual                      5.477500e+17  18093.0        NaN            NaN"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anova_table = sm.stats.anova_lm(model, typ=2)\n",
+    "anova_table"
    ]
   },
   {
@@ -727,13 +1005,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "My conclusion:\n",
+    "As the p-value is certainly smaller than 0.05, we reject the null hypothesis and conclude that player's preffered foot and position have an impact on their value.\n"
    ]
   },
   {
@@ -745,12 +1021,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(Nationality)</th>\n",
+       "      <td>3.281224e+16</td>\n",
+       "      <td>163.0</td>\n",
+       "      <td>6.762478</td>\n",
+       "      <td>4.840477e-134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>5.370951e+17</td>\n",
+       "      <td>18043.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      sum_sq       df         F         PR(>F)\n",
+       "C(Nationality)  3.281224e+16    163.0  6.762478  4.840477e-134\n",
+       "Residual        5.370951e+17  18043.0       NaN            NaN"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "formula = 'ValueNumeric ~ C(Nationality)'\n",
+    "model = ols(formula=formula, data=fifa).fit()\n",
+    "anova_table = sm.stats.anova_lm(model, typ=2)\n",
+    "anova_table\n"
    ]
   },
   {
@@ -758,6 +1093,14 @@
    "metadata": {},
    "source": [
     "What is your conclusion from this ANOVA?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My conclusion:\n",
+    "As the p-value is certainly smaller than 0.05, we reject the null hypothesis and conclude that player's nationality has an impact on their value."
    ]
   },
   {
@@ -773,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,40 +1131,6 @@
     "Using the FIFA dataset, in the cell below, create a linear model predicting value using stamina and sprint speed. create the model using `statsmodels`. Print the model summary.\n",
     "\n",
     "Hint: remember to add an intercept to the model using the `add_constant` function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Report your findings from the model summary. In particular, report about the model as a whole using the F-test and how much variation is predicted by the model using the r squared."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your conclusions here:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, create a second regression model predicting value using potential. Create the model using `statsmodels` and print the model summary. Remember to add a constant term."
    ]
   },
   {
@@ -855,12 +1164,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot a scatter plot of value vs. potential. Do you see a linear relationship?"
+    "Next, create a second regression model predicting value using potential. Create the model using `statsmodels` and print the model summary. Remember to add a constant term."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Report your findings from the model summary. In particular, report about the model as a whole using the F-test and how much variation is predicted by the model using the r squared."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your conclusions here:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot a scatter plot of value vs. potential. Do you see a linear relationship?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
