--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -12,12 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "from scipy.stats import f_oneway\n",
+    "from scipy.stats import linregress\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "from matplotlib import pyplot as plt\n"
    ]
   },
   {
@@ -39,11 +44,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-12-21</td>\n",
+       "      <td>74</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67</td>\n",
+       "      <td>49</td>\n",
+       "      <td>43</td>\n",
+       "      <td>93</td>\n",
+       "      <td>75</td>\n",
+       "      <td>57</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>29.59</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-12-22</td>\n",
+       "      <td>56</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>43</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>93</td>\n",
+       "      <td>68</td>\n",
+       "      <td>43</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.13</td>\n",
+       "      <td>29.87</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-12-23</td>\n",
+       "      <td>58</td>\n",
+       "      <td>45</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31</td>\n",
+       "      <td>27</td>\n",
+       "      <td>23</td>\n",
+       "      <td>76</td>\n",
+       "      <td>52</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.49</td>\n",
+       "      <td>30.41</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-12-24</td>\n",
+       "      <td>61</td>\n",
+       "      <td>46</td>\n",
+       "      <td>31</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>21</td>\n",
+       "      <td>89</td>\n",
+       "      <td>56</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>30.3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-12-25</td>\n",
+       "      <td>58</td>\n",
+       "      <td>50</td>\n",
+       "      <td>41</td>\n",
+       "      <td>44</td>\n",
+       "      <td>40</td>\n",
+       "      <td>36</td>\n",
+       "      <td>86</td>\n",
+       "      <td>71</td>\n",
+       "      <td>56</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>30.27</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>T</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "0  2013-12-21         74        60        45            67           49   \n",
+       "1  2013-12-22         56        48        39            43           36   \n",
+       "2  2013-12-23         58        45        32            31           27   \n",
+       "3  2013-12-24         61        46        31            36           28   \n",
+       "4  2013-12-25         58        50        41            44           40   \n",
+       "\n",
+       "  DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  ...  \\\n",
+       "0           43                  93                 75                 57  ...   \n",
+       "1           28                  93                 68                 43  ...   \n",
+       "2           23                  76                 52                 27  ...   \n",
+       "3           21                  89                 56                 22  ...   \n",
+       "4           36                  86                 71                 56  ...   \n",
+       "\n",
+       "  SeaLevelPressureAvgInches SeaLevelPressureLowInches VisibilityHighMiles  \\\n",
+       "0                     29.68                     29.59                  10   \n",
+       "1                     30.13                     29.87                  10   \n",
+       "2                     30.49                     30.41                  10   \n",
+       "3                     30.45                      30.3                  10   \n",
+       "4                     30.33                     30.27                  10   \n",
+       "\n",
+       "  VisibilityAvgMiles VisibilityLowMiles WindHighMPH WindAvgMPH WindGustMPH  \\\n",
+       "0                  7                  2          20          4          31   \n",
+       "1                 10                  5          16          6          25   \n",
+       "2                 10                 10           8          3          12   \n",
+       "3                 10                  7          12          4          20   \n",
+       "4                 10                  7          10          2          16   \n",
+       "\n",
+       "  PrecipitationSumInches               Events  \n",
+       "0                   0.46  Rain , Thunderstorm  \n",
+       "1                      0                       \n",
+       "2                      0                       \n",
+       "3                      0                       \n",
+       "4                      T                       \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "austin = pd.read_csv('../austin_weather.csv')\n",
+    "austin.head()\n"
    ]
   },
   {
