otro commit por aqui

--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -1226,11 +1226,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin_fixed=austin.interpolate()"
    ]
   },
   {
@@ -1242,11 +1243,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                          0\n",
+       "TempHighF                     0\n",
+       "TempAvgF                      0\n",
+       "TempLowF                      0\n",
+       "DewPointHighF                 0\n",
+       "DewPointAvgF                  0\n",
+       "DewPointLowF                  0\n",
+       "HumidityHighPercent           0\n",
+       "HumidityAvgPercent            0\n",
+       "HumidityLowPercent            0\n",
+       "SeaLevelPressureHighInches    0\n",
+       "SeaLevelPressureAvgInches     0\n",
+       "SeaLevelPressureLowInches     0\n",
+       "VisibilityHighMiles           0\n",
+       "VisibilityAvgMiles            0\n",
+       "VisibilityLowMiles            0\n",
+       "WindHighMPH                   0\n",
+       "WindAvgMPH                    0\n",
+       "WindGustMPH                   0\n",
+       "Events                        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "austin_fixed.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                           0\n",
+       "TempHighF                      0\n",
+       "TempAvgF                       0\n",
+       "TempLowF                       0\n",
+       "DewPointHighF                  7\n",
+       "DewPointAvgF                   7\n",
+       "DewPointLowF                   7\n",
+       "HumidityHighPercent            2\n",
+       "HumidityAvgPercent             2\n",
+       "HumidityLowPercent             2\n",
+       "SeaLevelPressureHighInches     3\n",
+       "SeaLevelPressureAvgInches      3\n",
+       "SeaLevelPressureLowInches      3\n",
+       "VisibilityHighMiles           12\n",
+       "VisibilityAvgMiles            12\n",
+       "VisibilityLowMiles            12\n",
+       "WindHighMPH                    2\n",
+       "WindAvgMPH                     2\n",
+       "WindGustMPH                    4\n",
+       "Events                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "austin.isnull().sum()"
    ]
   },
   {
